# rackctl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.adoc  README.md  deny.toml  flake.nix  run-all-checks.sh
.claude/skills/device-editor-gui/: SKILL.md
.claude/skills/protocol-specification/: SKILL.md  checklist.md  diagrams.md  format-tools.md  framed-uart-protocol.adoc  lint_protocol.py  protocol-spec.skill  template.adoc
.claude/skills/rust-coding-rules/references/: deny.toml
.github/workflows/: release.yml
contrib/eleven-rack-alsa-quirk/: README.adoc  eleven-rack-uac2-quirk.patch  insert-quirk.py  nixos-eleven-rack.nix  quirk-entry.c  wireplumber-eleven-rack.conf  wireplumber-eleven-rack.nix
crates/eleven/: Cargo.toml
crates/eleven-audio-probe/: Cargo.toml
crates/eleven-audio-probe/src/: main.rs
crates/eleven-cli/: Cargo.toml
crates/eleven-cli/src/: commands.rs  main.rs
crates/eleven-gui/src/: app.rs  device.rs  main.rs
crates/eleven-lib/: Cargo.toml
crates/eleven-lib/src/: format.rs  lib.rs  manage.rs
crates/eleven-model/: Cargo.toml
crates/eleven-model/src/: backup.rs  error.rs  lib.rs  param.rs  patch.rs  tfx.rs  value.rs
crates/eleven/src/: bank.rs  device.rs  lib.rs  sysex.rs
crates/eleven/src/backend/: mock.rs  mod.rs  rawmidi.rs
crates/gx700/: Cargo.toml
crates/gx700-cli/: Cargo.toml
crates/gx700-cli/src/: commands.rs  main.rs  value.rs
crates/gx700-gui/: Cargo.toml
crates/gx700-gui/src/: app.rs  config.rs  loader.rs  main.rs  writer.rs
crates/gx700-lib/src/: format.rs
crates/gx700/examples/: gen_patch_format.rs
crates/gx700/src/: device.rs  error.rs  lib.rs  param.rs  patch.rs  sysex.rs  typed.rs  units.rs
crates/gx700/src/backend/: mock.rs  mod.rs  rawmidi.rs
crates/midi/src/: lib.rs  port.rs
crates/sysex/src/: lib.rs
crates/tascam-cli/: Cargo.toml
crates/tascam-cli/src/: commands.rs  main.rs  value.rs
crates/tascam-cli/tests/: cli.rs
crates/tascam-gui/: Cargo.toml
crates/tascam-gui/src/: app.rs  bridge.rs  channel.rs  config.rs  curves.rs  main.rs  output.rs  routing.rs  scenes.rs
crates/tascam-us16x08/: Cargo.toml
crates/tascam-us16x08/src/: control.rs  convert.rs  device.rs  error.rs  event.rs  lib.rs  meter.rs  preset.rs
crates/tascam-us16x08/src/backend/: alsa.rs  mod.rs
crates/tascam-us16x08/tests/: device.rs
crates/ui-common/src/: eq.rs  lib.rs
crates/us16x08/: Cargo.toml
crates/us16x08-cli/: Cargo.toml
crates/us16x08-cli/src/: commands.rs  main.rs  value.rs
crates/us16x08-cli/tests/: cli.rs
crates/us16x08-gui/: Cargo.toml
crates/us16x08-gui/src/: app.rs  bridge.rs  channel.rs  config.rs  curves.rs  main.rs  output.rs  poller.rs  routing.rs
crates/us16x08/src/: error.rs  lib.rs
crates/us16x08/src/backend/: mock.rs
crates/us16x08/tests/: device.rs
docker/mixer-dev/: Dockerfile
docs/: architecture.adoc  eleven-rack-audio-driver-scope.adoc  eleven-rack-rig-format.adoc  eleven-rack-roadmap.adoc  eleven-rack-sysex-protocol.adoc  gx700-gui-roadmap.adoc  gx700-patch-data-format.adoc  gx700-sysex-protocol.adoc  gx700-user-manual.adoc  signal-chain.adoc  signal-chain.md  user-manual.adoc
docs/external-specs/: .gitignore  README.adoc
packaging/: README.adoc  rackctl-us16x08-gui.desktop  tascam-mixer.desktop
