[package]
name = "rackctl-eleven-lib"
version.workspace = true
description = "Eleven Rack library and rig-management layer: on-disk rig libraries, .tfx import, and (later) device-touching management, atop rackctl-eleven + rackctl-core. Scaffold — most functionality lands with the rig-format and catalog work."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false             # internal support crate (path dependency), not for crates.io

[dependencies]
rackctl-eleven = { workspace = true }

[lints]
workspace = true
