[package]
name = "rackctl-gx700"
version.workspace = true
description = "Control-surface library for the BOSS GX-700 guitar effects processor, driven over MIDI System Exclusive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `alsa` pulls in the real rawmidi transport (via the `alsa` crate); without it
# only the in-memory mock transport is available, so the library still builds and
# tests with no sound card or libasound (CI, dev without hardware).
default = ["alsa"]
alsa = ["dep:alsa"]

[dependencies]
alsa = { workspace = true, optional = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
