[package]
name = "tascam-us16x08"
version = "0.1.0"
description = "Control-surface library for the Tascam US-16x08 USB audio interface, driven through the ALSA high-level control (HCTL) API."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `alsa` pulls in libasound (via the `alsa` crate) for the real hardware
# backend. It is on by default; build/test with `--no-default-features` to use
# only the in-memory `MockBackend` on machines without a sound card or libasound.
default = ["alsa"]
alsa = ["dep:alsa"]

[dependencies]
thiserror.workspace = true
alsa = { workspace = true, optional = true }

[lints]
workspace = true
