[package]
name = "rackctl-us16x08-cli"
version.workspace = true
description = "Command-line control tool (rackctl-us16x08) for the Tascam US-16x08 USB audio interface."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rackctl-us16x08"
path = "src/main.rs"

[features]
# Mirror the library: the real ALSA backend is on by default; build with
# `--no-default-features` for a mock-only binary that needs no sound card.
default = ["alsa"]
alsa = ["rackctl-us16x08/alsa"]

[dependencies]
rackctl-us16x08 = { path = "../us16x08", default-features = false }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
serde_json.workspace = true
directories.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
